test: Corrigindo testes unitarios doc: incluindo docs, comentarios em linha e outras exxplicações do projeto